--- a/app/assets/stylesheets/bootstrap/bootstrap-modal.css.scss
+++ b/app/assets/stylesheets/bootstrap/bootstrap-modal.css.scss
@@ -27,6 +27,7 @@
       }
 
       .modal-footer {
+        background-color: $vk-modal-footer-bg-color;
         text-align: center;
         padding: 15px $modal-inner-padding 45px $modal-inner-padding;
 
